[package]
name = "sm_uuid_generator"
version = "1.0.0"
edition = "2021"
authors=["Tofix.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.81"
json_comments = "0.2.1"
colored = "2.0.0"
serde = { version = "1.0.14", features = ["derive"] }
