[package]
name = "sm_uuid_generator"
version = "2.2.0"
edition = "2021"
authors=["Tofix.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.81"
json_comments = "0.2.1"
serde = { version = "1.0.14", features = ["derive"] }
owo-colors = "3.5.0"
error-stack = "0.2.3"
log = "0.4.17"
simple_logger = "3.0.0"
clap = {version =  "4.0.18", features = ["derive"]}

[profile.release]
strip = true # Strip symbols from binary
opt-level = "s" # Optimize for size
lto = true # Link time optimization
codegen-units = 1 # Maximize size reduction optimizations
